--- a/week 2/Exercise2-Portfolio/Bio.html
+++ b/week 2/Exercise2-Portfolio/Bio.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8">
+    <meta name="description" content="About thomas j watson">
+    <meta name="keywords" content="HTML, CSS, JavaScript">
+    <meta name="author" content="John Doe">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="index,follow">
+    <meta name="twitter:title" content="European Travel Destinations ">
+    <meta name="twitter:description" content=" Offering tour packages for individuals or groups.">
+    <meta name="twitter:image" content=" http://euro-travel-example.com/thumbnail.jpg">
+    <meta name="twitter:card" content="summary_large_image">
+    <a href=“https://www.example.com/product” rel=“ugc nofollow”>this</a>
     <title>Porfolio</title>
   </head>
   <body>
