linked css file in exercise 2

--- a/week 3/Exercise2-Portfolio/Bio.html
+++ b/week 3/Exercise2-Portfolio/Bio.html
@@ -11,7 +11,8 @@
     <meta name="twitter:description" content=" Offering tour packages for individuals or groups.">
     <meta name="twitter:image" content=" http://euro-travel-example.com/thumbnail.jpg">
     <meta name="twitter:card" content="summary_large_image">
-    <a href=“https://www.example.com/product” rel=“ugc nofollow”>this</a>
+    <a href=“https://www.example.com/product” rel=“ugc nofollow”></a>
+    <link rel="stylesheet" href="style.CSS">
     <title>Porfolio</title>
   </head>
   <body>
@@ -21,7 +22,6 @@
       <li><a href="#Hobby">Hobbies</a></li>
       <li><a href="#Contact">Contact</a></li>
     </nav>
-    <link rel="stylecss" href="style.css">
     <div id="Intro">
     <h1>Aakriti Manandhar</h1>
     <img src="Aakriti.jpg" alt="Aakriti.jpg" width="200px" height="200px" />
