added css file to ex 1

--- a/week 3/Exercise2-Portfolio/Bio.html
+++ b/week 3/Exercise2-Portfolio/Bio.html
@@ -26,20 +26,20 @@
     <h1>Aakriti Manandhar</h1>
     <img src="Aakriti.jpg" alt="Aakriti.jpg" width="200px" height="200px" />
     <h2>Introduction</h2>
-    <p>
-      Hi, I am Aakriti Manandhar. Former student of Global college of Management
-      and current student of Herald college. I was initially a Business student
-      who someone got into this stream. I never really plan my future instead i
-      try to be prepared for it. If you ask me what i aim to become, my answer
-      would probably be - I have no idea. I prefer going with the flow and see
-      what life offers me in these consecutive years.
+    <p class="redElement">
+  Hi, I am Aakriti Manandhar. Former student of Global college of Management
+  and current student of Herald college. I was initially a Business student
+  who someone got into this stream. I never really plan my future instead i
+  try to be prepared for it. If you ask me what i aim to become, my answer
+  would probably be - I have no idea. I prefer going with the flow and see
+  what life offers me in these consecutive years.
     </p>
     </div>
     <div id="Edu">
     <h2>Education</h2>
     <table border ="1" cellspacing="0">
       <tr>
-        <th>Institute</th>
+        <th input type="text">Institute</th>
         <th>Year</th>
         <th>Grades</th>
       </tr>
@@ -79,7 +79,7 @@
     </form>
     </div>
     <footer>
-        <p>Contact me here <a href="https://www.instagram.com/aakriti._.manandhar/"> instagram</a></p>
+        <p id="change">Contact me here <a href="https://www.instagram.com/aakriti._.manandhar/"> instagram</a></p>
         Copyright@2022
     </footer>
   </body>
