--- a/week 3/Exercise2-Portfolio/Bio.html
+++ b/week 3/Exercise2-Portfolio/Bio.html
@@ -69,13 +69,12 @@
     <div id="Contact">
     <h2>Contact me</h2>
     <form>
-        <label>Name:</label>
-        <input name="text"><br>
-        <label>Email:</label>
-        <input Email="text"><br>
-        <label>Message:</label>
-        <textarea></textarea><br>
-        <input name="Submit" value="Submit">
+      <input type="text" name="" placeholder="first name">
+      <input type="text" name="" placeholder="last name">
+      <input type="mail" name="" placeholder="email">
+      <input type="tel" name="" placeholder="number">
+      <textarea placeholder="your-message"></textarea>
+      <input type="submit" name="submit">
     </form>
     </div>
     <footer>
